# hedgehog_core

./: .dockerignore  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
deploy/: .env.example  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  install-in-container.sh
deploy/caddy/: Caddyfile
hedgehog/: __init__.py  config.py  fileserver.py  ids.py  main.py  protocol.py  tls.py
hedgehog/adapters/: screen_grid.py
hedgehog/bus/: hub.py
hedgehog/core/: auth.py  claude_session.py  pty_session.py  session_base.py
hedgehog/store/: chats.py  history.py  mcp_registry.py  skill_sources.py  skills_registry.py
hedgehog/wss/: server.py
