[project]
name = "hedgehog"
version = "0.1.0"
description = "Ёжик — Devolution Hedgehog server daemon"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "pydantic>=2.7",
    "structlog>=24.1",
    "claude-agent-sdk>=0.1.0",
    "aiohttp>=3.10",
    "cryptography>=42.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
